# swappy_rs

./: CHANGELOG.md  Cargo.toml  README.md  be_the_machine  todo.md
src/: alphagram.rs  candidate_anagram.rs  found_words.rs  main.rs  node.rs  priority.rs  solver.rs  word.rs  word_list.rs
test_support/: smallish_list.txt  sort_longest_to_shortest  wordlist.txt
