[package]
name = "swappy"
version = "0.2.0"
authors = ["Nathan Long <him@nathanmlong.com>"]
edition = "2018"
exclude = ["test_support/*"]
license = "MIT OR Apache-2.0"
description = "An anagram generator"
readme = "README.md"
homepage = "https://gitlab.com/nathanl/swappy.rs"
repository = "https://gitlab.com/nathanl/swappy.rs"
keywords = ["anagrams", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# not explicitly listing test files for this; using tag instead
benchmark = []

[dependencies]
shellexpand = "1.1.1"
lazy_static = "1.4.0"
regex = "1.3.9"
